# CurveIntel

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  batch_analyze.py  docker-compose.yml  docker-entrypoint.sh  planlar.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  vendor_support.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_phase_2_1_database_layer.py
docs/: PROJE_PLANI.md  algorithm_specification.md  architecture.md  current_status_and_usage.md  release_notes_v2.0.0.md  remaining_work_handoff.md  validation_report.md  vendor_integration.md
docs/research/deep_research_prompts/prompt1/: 4.7_opus_ciktisi.md  chatgpt_cikti.md  gemini_cikti.md
docs/research/deep_research_prompts/prompt2/: 4.7_opus_ciktisi2.md  chatgpt_cikti2.md  gemini_cikti2.md
docs/research/deep_research_prompts/prompt3/: 4.7_opus_ciktisi3.md  chatgpt_cikti3.md  gemini_cikti3.md
docs/research/technical_audit/prompt1/: 4.7_opus_ciktisi.md  chatgpt_ciktisi.md  gemini_ciktisi.md
docs/research/technical_audit/prompt2/: 4.7_opus_ciktisi2.md  chatgpt_ciktisi2.md  gemini_ciktisi2.md
docs/research/technical_audit/prompt3/: 4.7_opus_ciktisi3.md  chatgpt_ciktisi3.md  gemini_ciktisi3.md
examples/: C00Al6xxxT4Numisheet2020R01T1.521W17.91-S-Stress-Strain.csv  README.md  sample_nist.csv
src/: __init__.py
src/curveintel/: __init__.py  manual_data.py
src/curveintel/auth/: __init__.py  dependencies.py  router.py  schemas.py  security.py
src/curveintel/db/: __init__.py  database.py  enums.py  models.py  repository.py  schemas.py  serializers.py  service.py
src/curveintel/web/: __init__.py  settings.py
src/models/: enums.py
src/pipeline/: anomaly.py  base.py  batch_qc.py  extraction.py  ingestion.py  preprocessing.py  reporting.py  vendor_profiles.py
tests/: __init__.py  conftest.py  debug_score.py  debug_worst.py  diag_summary.py  diagnostic_all_csv.py  diagnostic_results.csv  support.py  test_api.py  test_auth.py  test_batch_curated.py  test_db.py  test_examples.py  test_nist.py  test_pipeline.py  test_pipeline_steps.py  test_postgres_smoke.py  test_report.py  test_useries.py  test_validation.py
web/: __init__.py  app.py
web/templates/: dashboard.html  guide.html  login.html
