[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curveintel"
version = "2.0.0"
description = "ISO 6892-1:2019 compliant tensile test analysis engine with multi-vendor CSV support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Verm1lion"},
]
keywords = [
    "tensile-test", "ISO-6892", "stress-strain", "mechanical-testing",
    "quality-control", "materials-science", "RANSAC", "vendor-agnostic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "reportlab>=4.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
]

[project.urls]
Homepage = "https://github.com/Verm1lion/CurveIntel"
Repository = "https://github.com/Verm1lion/CurveIntel"
Issues = "https://github.com/Verm1lion/CurveIntel/issues"
Documentation = "https://github.com/Verm1lion/CurveIntel/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "web*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
